@@ -248,16 +248,20 @@ else
   SRC_DIR_LINK = $(REFLINK)
 endif
 
-if !DISABLE_TESTS
 if !DISABLE_HOTSPOT_TESTS
-TEST_SUITES = hotspot
+HOTSPOT_TEST_SUITE = hotspot
 endif
+
 if !DISABLE_JDK_TESTS
-TEST_SUITES = $(TEST_SUITES) jdk
+JDK_TEST_SUITE = $(TEST_SUITES) jdk
 endif
+
 if !DISABLE_LANGTOOLS_TESTS
-TEST_SUITES = $(TEST_SUITES) langtools
+LANGTOOLS_TEST_SUITE = langtools
 endif
+
+if !DISABLE_TESTS
+TEST_SUITES = $(HOTSPOT_TEST_SUITE) $(JDK_TEST_SUITE) $(LANGTOOLS_TEST_SUITE)
 TESTS_TO_RUN = jtreg $(addprefix check-,$(TEST_SUITES))
 endif
 
